--- a/src/Particles.css
+++ b/src/Particles.css
@@ -5,13 +5,18 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: -1;
+    display: none;
+    pointer-events: none;
 }
 
 .particle {
     position: absolute;
     border-radius: 50%;
     animation: moveParticle 150s linear infinite;
+}
+
+.section.about .particle-container {
+    display: block;
 }
 
 @keyframes moveParticle {
